--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -14,6 +14,7 @@
     "lint": "backstage-cli package lint"
   },
   "dependencies": {
+    "@aws-sdk/client-sts": "^3.662.0",
     "@backstage/app-defaults": "^1.5.11",
     "@backstage/catalog-model": "^1.7.0",
     "@backstage/cli": "^0.27.1",
@@ -38,14 +39,21 @@
     "@backstage/plugin-techdocs-react": "^1.2.8",
     "@backstage/plugin-user-settings": "^0.8.12",
     "@backstage/theme": "^0.5.7",
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
+    "@internal/backstage-plugin-home": "^0.1.0",
+    "@internal/backstage-plugin-primer-plugin": "^0.1.0",
     "@material-ui/core": "^4.12.2",
     "@material-ui/icons": "^4.9.1",
+    "@mui/material": "^6.1.2",
+    "@mui/styled-engine-sc": "^6.1.2",
     "history": "^5.0.0",
     "react": "^18.0.2",
     "react-dom": "^18.0.2",
     "react-router": "^6.3.0",
     "react-router-dom": "^6.3.0",
-    "react-use": "^17.2.4"
+    "react-use": "^17.2.4",
+    "styled-components": "^6.1.13"
   },
   "devDependencies": {
     "@backstage/test-utils": "^1.6.0",
@@ -54,6 +62,7 @@
     "@testing-library/jest-dom": "^6.0.0",
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.0.0",
+    "@types/react": "^18.3.11",
     "@types/react-dom": "*",
     "cross-env": "^7.0.0"
   },
